<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sitenv</groupId>
    <artifactId>referenceccdavalidator</artifactId>
    <version>1.0.11-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Reference CCDA Validator</name>

    <properties>
        <!-- Generic properties -->
        <java.version>1.7</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <repositories>
        <!--<repository>
            <id>mdht-vocab-repo</id>
            <url>file://${project.basedir}/mdht-vocab-repo</url>
        </repository>-->
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>libs-release</name>
            <url>http://devsoap.sitenv.org:8081/artifactory/libs-release</url>
        </repository>
        <repository>
            <snapshots />
            <id>snapshots</id>
            <name>libs-snapshot</name>
            <url>http://devsoap.sitenv.org:8081/artifactory/libs-snapshot</url>
        </repository>        
    </repositories>

    <dependencies>
        <!-- START MDHT DEPENDENCIES - from devsoap.sitenv.org:8081 artifactory -->
		<!-- 1st party MDHT - MODELS from https://github.com/mdht/mdht-models -->
		<dependency>
		    <groupId>org.openhealthtools.mdht.cda</groupId>
		    <artifactId>org.openhealthtools.mdht.uml.cda.consol2</artifactId>
		    <version>2.6.0.20161229</version>
		</dependency>
		<dependency>
		    <groupId>org.openhealthtools.mdht.cda</groupId>
		    <artifactId>org.openhealthtools.mdht.uml.cda.mu2consol</artifactId>
		    <version>2.6.0.20161229</version>
		</dependency>
		<!-- 1st party MDHT - PLUGINS from http://git.eclipse.org/c/mdht/org.eclipse.mdht.git -->
		<dependency>
		    <groupId>org.eclipse.mdht</groupId>
		    <artifactId>org.eclipse.mdht.emf.runtime</artifactId>
		    <version>3.0.0-20170103.233449-2</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.mdht</groupId>
		    <artifactId>org.eclipse.mdht.uml.cda</artifactId>
		    <version>3.0.0-20170103.234048-3</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.mdht</groupId>
		    <artifactId>org.eclipse.mdht.uml.hl7.datatypes</artifactId>
		    <version>3.0.0-20170103.234136-3</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.mdht</groupId>
		    <artifactId>org.eclipse.mdht.uml.hl7.rim</artifactId>
		    <version>3.0.0-20170103.234147-3</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.mdht</groupId>
		    <artifactId>org.eclipse.mdht.uml.hl7.vocab</artifactId>
		    <version>3.0.0-20170103.234157-3</version>
		</dependency>	
		<!-- 3rd party MDHT -->
		<dependency>
			<groupId>lpg.runtime.java</groupId>
			<artifactId>lpg.runtime.java</artifactId>
			<version>2.0.17.v201004271640</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf.common</groupId>
			<artifactId>org.eclipse.emf.common</artifactId>
			<version>2.11.1.v20160208-0816</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.emf.ecore</groupId>
		    <artifactId>org.eclipse.emf.ecore</artifactId>
		    <version>2.11.2.v20160208-0816</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.emf.ecore.xmi</groupId>
		    <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
		    <version>2.11.1.v20160208-0816</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.ocl</groupId>
		    <artifactId>org.eclipse.ocl</artifactId>
		    <version>3.5.0.v20150521-1211</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.ocl.common</groupId>
			<artifactId>org.eclipse.ocl.common</artifactId>
			<version>1.3.0.v20150519-0914</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.ocl.ecore</groupId>
			<artifactId>org.eclipse.ocl.ecore</artifactId>
			<version>3.5.0.v20150525-1635</version>		
		</dependency>
		<dependency>
			<groupId>org.eclipse.uml2.common</groupId>
			<artifactId>org.eclipse.uml2.common</artifactId>
			<version>2.1.0.v20160201-0816</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.uml2.types</groupId>
		    <artifactId>org.eclipse.uml2.types</artifactId>
		    <version>2.0.0.v20160201-0816</version>
		</dependency>
        <!-- END MDHT DEPENDENCIES -->

        <!-- START VOCAB DEPENDENCIES -->
        <dependency>
            <groupId>org.sitenv.vocabulary</groupId>
            <artifactId>codevalidator-api</artifactId>
            <version>1.0.5-SNAPSHOT</version>
        </dependency>
        <!-- END VOCAB DEPENDENCIES -->

        <!-- START CONTENT DEPENDENCIES -->
        <dependency>
            <groupId>org.sitenv</groupId>
            <artifactId>contentvalidator-api</artifactId>
            <version>1.0.6</version>
        </dependency>
        <!-- END CONTENT DEPENDENCIES -->

        <!-- Core utilities used by other modules. Define this if you use Spring
            Utility APIs (org.springframework.core.*/org.springframework.util.*) -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- Spring MVC for Servlet Environments (depends on spring-core, spring-beans,
            spring-context, spring-web) Define this if you use Spring MVC with a Servlet
            Container such as Apache Tomcat (org.springframework.web.servlet.*) -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.5.3</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.5.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.7.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.14</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>4.2.4.RELEASE</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <finalName>referenceccdaservice</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <wtpversion>2.0</wtpversion>
                    <downloadSources>true</downloadSources>
                    <downloadJavadocs>true</downloadJavadocs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.2.2.v20140723</version>
                <configuration>
                    <scanIntervalSeconds>3</scanIntervalSeconds>
                    <jvmArgs>-Xmx2024m -Xms2024m -XX:PermSize=256m -XX:MaxPermSize=512m</jvmArgs>
                    <webApp>
                        <contextPath>/referenceccdaservice</contextPath>
                    </webApp>
                </configuration>
            </plugin>
            <plugin>
                <groupId>external.atlassian.jgitflow</groupId>
                <artifactId>jgitflow-maven-plugin</artifactId>
                <version>1.0-m5.1</version>
                <configuration>
                    <noDeploy>true</noDeploy>
                    <allowUntracked>true</allowUntracked>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <allowSnapshots>true</allowSnapshots>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <server>${tomcat-server}</server>
                    <url>${tomcat-url}</url>
                    <path>/referenceccdaservice</path>
                    <update>true</update>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>local</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-war-plugin</artifactId>
                        <version>2.4</version>
                        <configuration>
                            <failOnMissingWebXml>false</failOnMissingWebXml>
                            <warSourceDirectory>${project.build.directory}/${project.build.finalName}</warSourceDirectory>
                            <filters>
                                <filter>src/main/profiles/local/environment.properties</filter>
                            </filters>
                            <webResources>
                                <resource>
                                    <directory>src/main/webapp</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </webResources>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>test</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-war-plugin</artifactId>
                        <version>2.4</version>
                        <configuration>
                            <failOnMissingWebXml>false</failOnMissingWebXml>
                            <warSourceDirectory>${project.build.directory}/${project.build.finalName}</warSourceDirectory>
                            <filters>
                                <filter>src/main/profiles/test/environment.properties</filter>
                            </filters>
                            <webResources>
                                <resource>
                                    <directory>src/main/webapp</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </webResources>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>prod</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-war-plugin</artifactId>
                        <version>2.4</version>
                        <configuration>
                            <failOnMissingWebXml>false</failOnMissingWebXml>
                            <warSourceDirectory>${project.build.directory}/${project.build.finalName}</warSourceDirectory>
                            <filters>
                                <filter>src/main/profiles/prod/environment.properties</filter>
                            </filters>
                            <webResources>
                                <resource>
                                    <directory>src/main/webapp</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </webResources>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- This profile will build a zip file of the war and all of the necessary artifacts to deploy the validator. -->
            <id>distribution</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>2.5.3</version>
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/java/org/sitenv/referenceccda/assembly/referenceccdaapi.xml</descriptor>
                            </descriptors>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-war-plugin</artifactId>
                        <version>2.4</version>
                        <configuration>
                            <failOnMissingWebXml>false</failOnMissingWebXml>
                            <warSourceDirectory>${project.build.directory}/${project.build.finalName}</warSourceDirectory>
                           <packagingExcludes>**/context.xml</packagingExcludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
